--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -38,13 +38,13 @@
           <mat-icon *ngIf="e.namespace() === state.currentApplication.namespace && !e.dictionary"
                    class="add-predefined-list"
                    matTooltip="add predefined values" >playlist_add</mat-icon>
-          <mat-icon *ngIf="e.namespace() === state.currentApplication.namespace && !e.dictionary"
+          <mat-icon *ngIf="e.namespace() === state.currentApplication.namespace && e.dictionary"
                    class="predefined-list"
                    matTooltip="update predefined values">playlist_add_check</mat-icon>
           <mat-icon *ngIf="e.namespace() === state.currentApplication.namespace"
                    matChipRemove
                    class="remove"
-                   matTooltip="delete entity type">cancel</mat-icon>
+                   matTooltip="delete entity type"></mat-icon>
         </mat-chip>
       </mat-chip-list>
   </nb-card-body>
