--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -26,7 +26,7 @@
                  *ngIf="displayActions && appConfig.answerToSentenceUrl && isRootSentence()">
         <i class="material-icons">question_answers</i>
       </nb-action>
-      <nb-action class="control-item" (click)="copyToClipboard()" nbTooltip="Copy sentence to clipboard"
+      <nb-action class="control-item" (click)="$event.stopPropagation();copyToClipboard();" nbTooltip="Copy sentence to clipboard"
                  *ngIf="displayActions && isRootSentence()">
         <i class="material-icons">content_copy</i>
       </nb-action>
@@ -36,6 +36,8 @@
          #tokensContainer
          class="tokens"
          (mouseup)="select()" (touchend)="select()"><span *ngFor="let t of tokens"
+                                                          (dblclick)="remove(t);$event.stopPropagation();"
+                                                          [title]="t.entity ? 'Double Click to remove' : ''"
                                                           [style.font-size]="fontSize"
                                                           [style.background]="t.color()"
                                                           [id]="prefix + t.index">{{t.text}}</span>
