fixes #670 bot admin: glitch on features list
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/feature/application-feature.component.css
+++ b/bot/admin/web/src/app/bot/feature/application-feature.component.css
@@ -31,15 +31,17 @@
 
 .name {
   float: left;
-  width: 150px;
+  min-width: 150px;
   line-height: 36px;
+  padding-right: 5px;
 }
 
 .category {
   float: left;
-  width: 400px;
+  min-width: 150px;
   font-size: medium;
   line-height: 36px;
+  padding-right: 5px;
 }
 
 .toggle {
