fixes #676 bot admin - media card label update does not work
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/simple-answer.component.html
+++ b/bot/admin/web/src/app/bot/story/simple-answer.component.html
@@ -23,7 +23,7 @@
   <div *ngFor="let a of answer.answers" class="answer">
     <textarea class="i18n-label"
               matInput
-              [(ngModel)]="a.label.defaultLocalizedLabel().label"
+              [(ngModel)]="a.label.defaultLocalizedLabelForLocale(state.currentLocale).label"
               (change)="updateLabel(a)"
               [style.height]="a.label.defaultLocalizedLabel().baseHeight()">
     </textarea>
