resolves #698 Add test saving to Xray
Remove created tab and add div at the end of 'test the bot' page
Add web page components for xray saving.
Add web page components for Tock saving
Add autocomplete on Tock test plans field
Enable test saving in Xray through Tock test webpage.
Add API in Tock to retrieve all test plans in Xray project.
Add selection of test plan during test creation.
Add method to retrieve test plans.
Change test dialog handler display into accordion.
Add test tab and rename 'test the bot' to 'live-testing'
Remove created tab and add div at the end of 'test the bot' page
Remove created tab and add div at the end of 'test the bot' page
Add web page components for xray saving.
Add web page components for Tock saving
Add autocomplete on Tock test plans field
Enable test saving in Xray through Tock test webpage.
Add API in Tock to retrieve all test plans in Xray project.
Add selection of test plan during test creation.
Enable xray test update.
Make "update dialog in Xray" part dynamic (Angular-friendly)
Make "Send dialog to Xray" part dynamic (Angular-friendly)
Disable accordion item : add test to Tock test plan.
Remove text from inputs when accordion items collapse.
Modify tooltip text according test context.

--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.css
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.css
@@ -33,3 +33,44 @@
 .messages {
   margin-bottom: 15px;
 }
+
+.dialog-handler {
+  float: right;
+}
+
+.dialog-handler button {
+  margin: 0 5px 0 5px;
+}
+
+.dialog-handler input {
+  margin: 0 10px 0 10px;
+}
+
+.test-plans-select {
+  margin: 0 5px 0 5px;
+  width: 10rem;
+  max-width: 10rem;
+}
+
+.test-plans-select {
+  margin: 0 5px 0 5px;
+  width: 10rem;
+  max-width: 10rem;
+}
+
+.dialog-manager-button {
+  margin: 0 5px 0 5px;
+}
+
+#test-saving-accordions nb-accordion {
+  float: left;
+  widht: 30%;
+}
+
+#test-saving-accordions button {
+  margin: 0 5px 0 5px;
+}
+
+#test-saving-accordions input {
+  margin: 0 10px 0 10px;
+}
