resolves #719 nlp: add intent errors and entity errors export
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/test-nlp/test-entity-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-entity-error.component.html
@@ -16,7 +16,8 @@
 <mat-card class="search">
   <mat-card-content>
     <mat-form-field class="intent">
-      <mat-select placeholder="Intent" [(ngModel)]="dataSource.intent" (selectionChange)="search()" class="search-input">
+      <mat-select placeholder="Intent" [(ngModel)]="dataSource.intent" (selectionChange)="search()"
+                  class="search-input">
         <mat-option value="">All</mat-option>
         <mat-optgroup *ngFor="let category of state.currentIntentsCategories | async" [label]="category.category">
           <mat-option *ngFor="let intent of category.intents" [value]="intent.qualifiedName()">
@@ -26,6 +27,9 @@
         <mat-option value="unknown">Unknown</mat-option>
       </mat-select>
     </mat-form-field>
+    <button nbButton ghost (click)="download()" matTooltip="Download the whole error list">
+      <mat-icon>cloud_download</mat-icon>
+    </button>
   </mat-card-content>
 </mat-card>
 
