--- a/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
@@ -28,6 +28,9 @@
         <mat-option value="unknown">Unknown</mat-option>
       </mat-select>
     </mat-form-field>
+    <button nbButton ghost (click)="download()" matTooltip="Download the whole error list">
+      <mat-icon>cloud_download</mat-icon>
+    </button>
   </mat-card-content>
 </mat-card>
 
