--- a/nlp/admin/web/src/app/core-nlp/auth/login/login.component.html
+++ b/nlp/admin/web/src/app/core-nlp/auth/login/login.component.html
@@ -63,9 +63,12 @@
                        id="input-password"
                        placeholder="Password"
                        [required]="true">
-                <ng-container *ngIf="userPassword.invalid && userPassword.touched ">
+                <ng-container *ngIf="errorMessage || (userPassword.invalid && userPassword.touched)">
                   <p class="error-message" *ngIf="userPassword.errors?.required">
                     Password is required!
+                  </p>
+                  <p class="error-message" *ngIf="errorMessage">
+                    {{errorMessage}}
                   </p>
                 </ng-container>
               </div>
