resolves #751 allow application feature to be configured by connectorId
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/feature/application-feature.component.css
+++ b/bot/admin/web/src/app/bot/feature/application-feature.component.css
@@ -45,6 +45,14 @@
   padding-right: 5px;
 }
 
+.application {
+  float: left;
+  min-width: 50px;
+  font-size: medium;
+  line-height: 36px;
+  padding-right: 5px;
+}
+
 .toggle {
   line-height: 36px;
 }
@@ -70,5 +78,13 @@
 
 .new {
   margin-right: 20px;
+}
+
+.first_new {
+  margin-top: 20px;
+}
+
+.connector {
+  height: 24px;
 }
 
