fixes #733 intents responsiveness
- Add max-width + ellipsis (...) to intent names and IDs
- Move 'Add shared intent' and 'Add state' buttons labels to tooltips only
- Enable wrapping of actions (last column)

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/nlp/admin/web/src/app/intents/intents.component.css
+++ b/nlp/admin/web/src/app/intents/intents.component.css
@@ -41,10 +41,22 @@
 
 .intent_name {
   font-size: larger;
+  /* Fixes #733 Responsiveness issues. */
+  display: inline-block;
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .intent_id {
   text-align: center;
+  /* Fixes #733 Responsiveness issues. */
+  display: inline-block;
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .intent_description {
@@ -69,7 +81,6 @@
 }
 
 .actions {
-  white-space: nowrap;
 }
 
 .entity {
