fixes #733 story dialog responsiveness
- Make modal dialog scrollable

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/story/story-dialog.component.css
+++ b/bot/admin/web/src/app/bot/story/story-dialog.component.css
@@ -18,6 +18,9 @@
   display: flex;
   flex-direction: column;
   width:400px;
+  /* Fixes #733 Responsiveness issues. */
+  max-height: calc(100vh - 210px);
+  overflow: auto;
 }
 
 .container > * {
