fixes #735 Add application label property
- Add label to application
- Set label to name by default
- Format name to prevent special chars

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -15,7 +15,7 @@
   -->
 <nb-card class="dialog">
   <nb-card-header>
-    Test the application <i>{{state.currentApplication.name}}</i>
+    Test the application <i>{{state.currentApplication.label}}</i>
   </nb-card-header>
   <nb-card-body *ngIf="testContext" id="test-saving-accordions">
     <nb-accordion>
