--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -48,7 +48,7 @@
         <mat-icon></mat-icon>
       </button>
 
-      <span class="applications-applications__app-name">{{app.name}}</span>
+      <span class="applications-applications__app-name">{{app.label}}</span>
 
       <div class="applications-applications__datas">
         <span *ngFor="let locale of app.supportedLocales">
