--- a/nlp/admin/web/src/app/theme/components/header/header.component.html
+++ b/nlp/admin/web/src/app/theme/components/header/header.component.html
@@ -35,7 +35,7 @@
              [ngModel]="state.currentApplication.name"
              class="app">
     <nb-option *ngFor="let app of state.applications"
-               [value]="app.name">{{ app.name }}
+               [value]="app.name">{{ app.label }}
     </nb-option>
   </nb-select>
 
